--- a/dissertation.bib
+++ b/dissertation.bib
@@ -103,6 +103,15 @@
   keywords = {Algorithms,Amino Acid Sequence,Amino Acids,Models Chemical,Molecular Sequence Data,Protein Folding,Proteins}
 }
 
+@misc{bevyengine,
+  title = {Bevy Engine},
+  author = {Contributors, Bevy},
+  year = {2023},
+  month = mar,
+  abstract = {A refreshingly simple data-driven game engine built in Rust},
+  langid = {english}
+}
+
 @article{bronislaw_TheoremeFunctionsDensembles_1928,
   title = {Un Theoreme Sur Les Functions d'ensembles},
   author = {Bronis{\l}aw, Knaster},
