--- a/sections/appraisals.tex
+++ b/sections/appraisals.tex
@@ -1,23 +1,21 @@
 \subsection{Reflections}
 
-Overall, the current project progressed as anticipated. We managed to keep
-consistent progress in both theory and development aspect. In addition,
-due to the theoretical overlap the project has with other fields, we
-were able to experiment with great variety of problems as well as
-develop research methodologies for tackling these problems.
+Overall we progresesd slower than originally anticipated. This 
+is due to our lack of experience with the subject and with reseach projects in general.
+In our original gantt chart, we had anticipated for software aspect of our project
+to be nearing completion. We were not able to meet the deadline due to the complexity
+of the topic. In hindsight, this allowed us to refine our project and plan ahead
+for more effectievly. 
 
-Of course understanding how to conduct such research came with a lot of trials and error.
-We quickly realised that such projects require a much more extensive literature review than anticipated.
+\subsection{Lessons Learned}
+
+As this is our first research project, we gained many valuable lessons from this experience.
+We quickly realised that such projects require a much more extensive literature review than anticipated, 
+and in general working on multiple problems is more beneficial than focusing on one.
 Moreover, when it comes to theorising and proof development, we faced many failures.
-Often, we spent an excessive amount of time working on a problem without being methodical.
-From that, we understood that when trying to prove statements, it is often more beneficial
-exploring the field as a whole, tackling various problems and gathering ideas from each.
-Moreover, each failed attempt allows us to understand a problem in greater depth, how it behaves
-and how to formulate our attempt to increase our chances.
+However, each failed attempt allowed us to understand a problem in greater depth and how to formulate our subsequent attempts to solve our problem.
 This can be observed in, we will analyze this is greater depth.ur canvas board \ref{fig:theory:obsidian-canvas}, where we
 used ``whiteboard'' approach to keep track of the project from a bird's-eye view. 
-We hope to use this exploratory methodology to uncover even more mysteries that surround
-the complexity of counting problems.
 
 
 % Over the last couple of months I made a lot of mistakes whilst working with the project.
