--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -51,17 +51,21 @@ as well as developing a software to visualise its instances.
 
 \end{enumerate}
 
-Below we will be representing the development milestones of the project.
+In addition to expanding the theory of $\textsc{\#PPAD} -1$, we aim to build
+a visualisation tool for $\textsc{PureCircuit}$ instances. This tool
+will allow us to visualise circuits as well as investigate the behaviour
+of $\textsc{PureCircuit}$ for controlled cases. More formally,
+we have the following milestones:
 
 \begin{enumerate}[label=S.\arabic*)]
     \item Visualise and verify a \textsc{PureCircuit} instance.
-    \item Generate a solution given a \textsc{PureCircuit} instance for a small number of nodes.
-    \item Count the number of solutions of a  \textsc{PureCircuit} instance for a small number of nodes.
+    \item Generate a solution given a \textsc{PureCircuit} instance.
+    \item Count the number of solutions of a  \textsc{PureCircuit}.
 \end{enumerate}
 
-
 We will compile the rest of the report, based on our current findings, how we altered our previous objectives 
-and general reflections.
+and general reflections. Moreover we will give a brief summary as to the subsequent steps
+and how plan to achieve the remaining milestones.
 
 
 \subsection{Research Question}
