--- a/sections/lit_review.tex
+++ b/sections/lit_review.tex
@@ -387,7 +387,7 @@ The current section offers a brief summary to relevant notions and concepts in K
 \end{definitionbox}
 
 Unless otherwise specified, we assume that all functions are \textit{natural} \ref{def:nat-func}, since
-they can be represented by circuits \ref{nat-func-circ}.
+they can be represented by circuits \ref{prop:nat-func-circ}.
 Detecting hazards is a concept that is analysed heavily when talking about Kleene logic.
 The idea is ensuring robustness in our circuits, meaning if all resolutions of $x \in \mathbb{T}^n$
 give the same value, then we should expect circuit to behave the same way \ref{def:hf-def}.
