--- a/sections/appraisals.tex
+++ b/sections/appraisals.tex
@@ -2,7 +2,7 @@
 
 Overall we progresesd slower than originally anticipated. This 
 is due to our lack of experience with the subject and with reseach projects in general.
-In our original gantt chart, we had anticipated for software aspect of our project
+In our original gantt chart, we had anticipated the software portion of our project
 to be nearing completion. We were not able to meet the deadline due to the complexity
 of the topic. In hindsight, this allowed us to refine our project and plan ahead
 for more effectievly. 
@@ -14,8 +14,10 @@ We quickly realised that such projects require a much more extensive literature 
 and in general working on multiple problems is more beneficial than focusing on one.
 Moreover, when it comes to theorising and proof development, we faced many failures.
 However, each failed attempt allowed us to understand a problem in greater depth and how to formulate our subsequent attempts to solve our problem.
-This can be observed in, we will analyze this is greater depth.ur canvas board \ref{fig:theory:obsidian-canvas}, where we
-used ``whiteboard'' approach to keep track of the project from a bird's-eye view. 
+Lastly, developed a methodology to research more effectively. We often found it helpful
+to utilise our canvas tools as seen in \ref{fig:theory:obsidian-canvas}, where
+a bird's-eye approach allowed us to make connections between problems more effectively.
+We hope that the remaining duration of the project will reflect our the aforementioned realisations.
 
 
 % Over the last couple of months I made a lot of mistakes whilst working with the project.
