--- a/sections/next_steps.tex
+++ b/sections/next_steps.tex
@@ -3,19 +3,21 @@
 For the remaining duration, we will focus on three main objectives:
 One will be to demonstrate that, the \textit{bipolar} colouring
 of \textsc{nD-StrongSperner} will keep the reduction parsimonious.
-Subsequently, we will to demonstrate hardness over \textsc{\#P} class either by finding
-reductions from the \textsc{SourceOrExcess} problem.
-And lastly, we will be to generalise our reduction to all $\textsc{\#PPAD}$ problems.
+Subsequently, we will to demonstrate hardness over \textsc{\#P} class by finding
+reductions from the \textsc{SourceOrExcess} problem due its separation from $\textsc{\#P}$ as shown \ref{par:count-ppad}.
+And lastly, we hope to develop enough gadgets and tools tackle the core question of the project.
 
 
 \subsection{Software Next Steps}
 
 In the next steps we aim to complete the rest of the milestones. 
 We believe that the usage of methods by Eichelberger et al. \cite{eichelberger_HazardDetectionCombinational_1965}
-and or polynomial algorithm for specific cases by \cite{deligkas_PureCircuitTightInapproximability_2024}
-will allow us to identify solutions. With regards to counting, we anticipate to implement
-this functionality for small instances.
-
+or polynomial algorithms for specific cases of \textsc{PureCircuit} by \cite{deligkas_PureCircuitTightInapproximability_2024}
+will allow us to identify solutions.
+Although the former method is still exponential in runtime \cite{eichelberger_HazardDetectionCombinational_1965,ikenmeyer_ComplexityHazardfreeCircuits_2019},
+we hope its average running time will be sufficient.
+Regarding the counting milestone, given the progression of the project, we hope to implement a brute force method
+for small instances.
 
 \subsection{Timetable}
 
