--- a/sections/current_progress/soft_progress.tex
+++ b/sections/current_progress/soft_progress.tex
@@ -1,4 +1,4 @@
-In our project we are focus on developing a visualisation tool
+In our project, we focus on developing a visualisation tool
 for \textsc{PureCircuit} instances. 
 In our introduction we referred to three main milestones. As of time of writing
 we are close to the completion of the first one. We will provide a table of
@@ -15,7 +15,7 @@ of our current visualisation in \ref{fig:soft:current-phases}
             Ability to add and move nodes                                  & Add values to value nodes                                                                                   \\ \hline
             Toggle between value nodes and gate nodes                                  & Specify the type of gate to add                                                                             \\ \hline
             Edge creation functionality. Ensure that edges can only be added between heterogeneous nodes & Add indicators as to how many edges are excess/remaining for the gate to be valid                           \\ \hline  
-            Move whole graph                                                           & Inclusion of a status bar as to whether the current assignment is correct, wrong or syntactically incorrect \\  \hline
+            Translate position of graph or position of nodes                                                            & Inclusion of a status bar as to whether the current assignment is correct, wrong or syntactically incorrect \\  \hline
             Create panel to show current state as well as some indicator and guides    &   \\ \hline
     \end{tabularx}
     \caption{Finished and remaining issues}\label{tab:soft:rem-unrem-issues-stage1}
